Added awards and some optimizations

--- a/red/templates/red/index.html
+++ b/red/templates/red/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    {% load mathfilters %}
     {% include "red/includes/account.html" %}
     <h1>Latest Posts</h1>
     {% if latest_posts_list %}
@@ -17,11 +18,29 @@
         {% for post in latest_posts_list %}
         <li>
             <p>
-                +{{post.likes}}{% if post.dislikes %} | -{{post.dislikes}}{% endif %}
-                <a href='{% url "sub" post.sub.name %}'>s/{{post.sub.name}}</a> <a href='{% url "post" post.sub.name post.id %}'> {{ post.title }}</a> 
+                {{ post.likes|sub:post.dislikes }}
+
+                <a href='{% url "sub" post.sub.name %}'>s/{{post.sub.name}}</a>
+                <a href='{% url "user" post.author %}'>u/{{post.author}}</a>
+                <a href='{% url "post" post.sub.name post.id %}'> {{ post.title }}</a>
+
                 {% if post.flair %} [{{post.flair.text}}] {% endif %}
-                <b>{% if post.nsfw %}(NSFW){% endif %} {% if post.spoiler %}(Spoiler){% endif %}</b>
+
+                <b>
+                    {% if post.nsfw %}(NSFW){% endif %} {% if post.spoiler %}(Spoiler){% endif %}
+                </b>
+
+                {{ post.comment_count }} comments
+
+                {% if post.awards %}
+                <p>Awards:
+                {% for name, count in post.award_count.items %}
+                    {{ count }}x {{ name }}{% if not forloop.last %},{% endif %}
+                {% endfor %}
+                </p>
+                {% endif %}
             </p>
+            
             <p>{{ post.content }}</p>
         </li>
         {% endfor %}
