--- a/red/templates/red/includes/account.html
+++ b/red/templates/red/includes/account.html
@@ -1,5 +1,5 @@
 {% if user.is_authenticated %}
-<a href='{% url "user" user.username %}'>Logged in as u/{{user.username}}</a>
+<a href='{% url "user" user.username %}'>Logged in as u/{{ user.username }}</a> {{ user.coins }} coins
 <button type="button" id="logout">Logout</button>
 {% else %}
 <a href='{% url "login" %}'>Log In</a>
