--- a/red/static/red/style/password_changer.scss
+++ b/red/static/red/style/password_changer.scss
@@ -1,6 +1,5 @@
 $box-height: 23%;
 $border: 2px;
-$checkbox-size: 20px;
 
 /* color palette */
 
@@ -116,8 +115,8 @@ div.stack {
     h1 {
         font-family: $title;
         font-weight: 200;
-        font-size: 54px;
-        line-height: 54px;
+        font-size: 45px;
+        line-height: 45px;
         margin: 0;
         padding: 0;
         text-shadow: 0 0 4px black;
@@ -146,21 +145,7 @@ div.stack {
         vertical-align: middle;
         left: $input-margin * 4 + 10px;
     }
-    label {
-        position: relative;
-        display: inline-block;
-        cursor: pointer;
-        left: 10px + $checkbox-size + calc($input-margin/2) + 2px;
-        font-family: $body;
-        font-weight: 400;
-        user-select: none;
-        height: $checkbox-size;
-        line-height: $checkbox-size;
-        width: auto;
-        vertical-align: middle;
-    }
-    input,
-    #checkbox {
+    input {
         width: 100%;
         height: 40px;
         border: 0;
@@ -169,31 +154,11 @@ div.stack {
         transition: 0.2s;
         background: transparent;
         vertical-align: middle;
-    }
-    #checkbox {
-        display: inline;
-        align-items: center;
-        text-align: center;
-        width: $checkbox-size;
-        height: $checkbox-size;
-        font-size: $checkbox-size - 3px;
-        line-height: $checkbox-size + $border;
-        left: -2 * $border - $checkbox-size - 10px;
-        top: -$border;
-        outline: 0;
-        border: 2px solid $gunmetal;
-        color: transparent;
-    }
-    input[type="checkbox"] {
-        display: none;
-        width: 1rem;
-        position: relative;
-        z-index: 3;
+        z-index: 10;
     }
     input[type="text"],
     [type="password"],
     [type="email"] {
-        height: 40px;
         padding: 0;
         padding-left: 40px;
         color: $offwhite;
@@ -253,25 +218,36 @@ div.stack {
         background-color: $blue3 !important;
         border: 2px solid $blue3 !important;
     }
-    #wrongdoing {
-        font-family: $body;
-        font-weight: 400;
-        color: $offwhite;
+    #loading {
+        width: 100%;
+        height: 30px;
         display: inline-block;
-        font-size: 16px;
         position: relative;
-        left: calc($input-margin/2);
-    }
-    #agreefield {
-        padding-bottom: 16px;
+        top: -35px;
+        z-index: 67;
+        opacity: 0;
+        pointer-events: none;
     }
 }
 
-#forgotdiv {
-    text-align: center;
-    width: 100%;
-    padding-bottom: 3px;
-    font-size: 18px;
+#submitdiv {
+    padding-bottom: 0;
+}
+
+#nextdiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    input:first-child {
+        margin-right: calc($input-margin);
+    }
+}
+
+p {
+    font-family: $sub;
+    color: $offwhite;
+    display: inline-block;
+    font-size: 20px;
 }
 
 .hidden {
