--- a/red/templates/red/login.html
+++ b/red/templates/red/login.html
@@ -3,7 +3,7 @@
 {% load static %}
 <head>
     <meta charset="UTF-8">
-    <title>Notes</title>
+    <title>Red: Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,6 +49,9 @@
                 </div>
                 <div class="inputfield">
                     <input type="button" value="CREATE MY ACCOUNT" id="createaccount">
+                </div>
+                <div class="inputfield" id="forgotdiv">
+                    <a href="/resetpassword" id="forgot">Forgot password?</a>
                 </div>
             </form>
         </div>
