--- a/red/templates/red/password_changer.html
+++ b/red/templates/red/password_changer.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <title>Red: Reset Password</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,400;0,800;1,400;1,800&family=Inter:wght@200;800&family=Overpass:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'>
+    {% include "red/includes/css_assets.html" %}
     <link rel="stylesheet" href="{% static 'red/style/password_changer.css' %}">
 </head>
 
@@ -54,12 +50,12 @@
                     <p id="wrongdoing"></p>
                 </div>
                 <div class="inputfield" id="submitdiv">
-                        {% if verified %}
-                        <input type="button" class="accentshould" value="CHANGE" id="change">
-                        {% else %}
-                        <input type="button" class="accentshould" value="EMAIL ME" id="send">
-                        {% endif %}
-                        {% include "red/includes/loader.html" %}
+                    {% if verified %}
+                    <input type="button" class="accentshould" value="CHANGE" id="change">
+                    {% else %}
+                    <input type="button" class="accentshould" value="EMAIL ME" id="send">
+                    {% endif %}
+                    {% include "red/includes/loader.html" %}
                 </div>
                 {% if verified %}
                 <div class="inputfield hidden" id="successdiv">
@@ -77,9 +73,6 @@
                 {% endif %}
             </form>
         </div>
-    </section>
-    <section class="scrolled">
-        <h2>This text should appear at the bottom</h2>
     </section>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
     <script src="{% static 'red/script/lib.js' %}?checksum=ba411cafee2f0f702522369da0b765e2"></script>
